Pass preview options to Javadoc Plugin